// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
  id="standard_container"
  rows={null}
>
  <section
    className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
      color={null}
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
      onClick={null}
    >
      TextInput
    </label>
  </section>
  <input
    autoComplete="off"
    className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
    cols=""
    disabled={false}
    id="standard"
    list={null}
    name="standard"
    onBlur={null}
    onChange={null}
    onFocus={null}
    onKeyPress={null}
    onKeyUp={null}
    pattern={null}
    placeholder={null}
    rows=""
    type="text"
  />
</section>
`;

exports[` 2`] = `
Array [
  <div
    className="Bar__BarLayout-icfo76-2 cvBNlB"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 cyOOXv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 fdqEyn"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bKkRmK"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="briefLabel_container"
        rows={null}
      >
        <section
          className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
            color={null}
            cursor="pointer"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Brief Label
          </label>
        </section>
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
          cols=""
          disabled={null}
          id="briefLabel"
          list={null}
          name="briefLabel"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="text"
        />
      </section>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-icfo76-2 cvBNlB"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 cyOOXv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 jGFUDO"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bKkRmK"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="noLabel_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
          cols=""
          disabled={null}
          id="noLabel"
          list={null}
          name="noLabel"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern={null}
          placeholder={null}
          rows=""
          type="text"
        />
      </section>
    </div>
  </div>,
]
`;

exports[` 3`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-1 dmAkaW"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 gRdpNW Form__Inputs-v2wrel-4 kZxse"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="default_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Text Input
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="default"
        list={null}
        name="default"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder={null}
        rows=""
        type="text"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 fHxLCQ"
      id="disabled_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 gvtvFM"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Text Input ( Disabled )
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bUchzY"
        cols=""
        disabled={true}
        id="disabled"
        list={null}
        name="disabled"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="text"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 hDCKnW"
      id="error_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 fuhXsK"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Text Input ( Error )
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 emeBGd"
        cols=""
        disabled={false}
        id="error"
        list={null}
        name="error"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="text"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 hDCKnW"
      id="error_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 fuhXsK"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Text Input ( Error )
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 emeBGd"
        cols=""
        disabled={false}
        id="error"
        list={null}
        name="error"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="text"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
      <section
        className="TextInput__MessageContainer-sc-1fep8p8-1 hnFtxk"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
          fontSize="0.75rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.4px"
        >
          This is an error message for you
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="error_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Text Input ( Warning )
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="error"
        list={null}
        name="error"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="text"
      />
      <section
        className="TextInput__MessageContainer-sc-1fep8p8-1 hnFtxk"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
          fontSize="0.75rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.4px"
        >
          this is my warning
        </p>
      </section>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="error_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Text Input ( Warning )
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="error"
        list={null}
        name="error"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="text"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
      <section
        className="TextInput__MessageContainer-sc-1fep8p8-1 hnFtxk"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
          fontSize="0.75rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.4px"
        >
          this is my warning
        </p>
      </section>
    </section>
  </section>
</form>
`;

exports[` 4`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-1 dmAkaW"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 gRdpNW Form__Inputs-v2wrel-4 kZxse"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="required_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 dXnxoD"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Text Input ( Required )
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="required"
        list={null}
        name="required"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="text"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="pattern_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Text
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="pattern"
        list={null}
        name="pattern"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern="[A-Za-z]{3}"
        placeholder="I am just keeping things warm"
        rows=""
        type="text"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Can contain only three letters (no numbers or special characters
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="textarea_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Text Area
        </label>
      </section>
      <textarea
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 iOiNOj"
        cols=""
        disabled={false}
        id="textarea"
        list={null}
        name="textarea"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="textarea"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="number_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Number
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="number"
        list={null}
        name="number"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="number"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="search_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Search
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="search"
        list={null}
        name="search"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="search"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="password_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Password
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="password"
        list={null}
        name="password"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern=".{6,}"
        placeholder="I am just keeping things warm"
        rows=""
        type="password"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Must contain 6 or more characters
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="email_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Email
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="email"
        list={null}
        name="email"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\\\\.[a-z]{2,}$"
        placeholder="I am just keeping things warm"
        rows=""
        type="email"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="phone_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Telephone Number
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="phone"
        list={null}
        name="phone"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
        placeholder="I am just keeping things warm"
        rows=""
        type="tel"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="url_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          URL
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="url"
        list={null}
        name="url"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern="https?://.+"
        placeholder="I am just keeping things warm"
        rows=""
        type="url"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="color_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Color
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="color"
        list={null}
        name="color"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="color"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="date_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Date
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="date"
        list={null}
        max="2999-12-31"
        min="1019-01-01"
        name="date"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="date"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="time_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Time
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="time"
        list={null}
        name="time"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="time"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="datetime_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Local Date/Time
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="datetime"
        list={null}
        name="datetime"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="datetime-local"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="month_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Month
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="month"
        list={null}
        name="month"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="month"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="week_container"
      rows={null}
    >
      <section
        className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Week
        </label>
      </section>
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="week"
        list={null}
        name="week"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder="I am just keeping things warm"
        rows=""
        type="week"
      />
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
  </section>
</form>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
  id="autocomplete_container"
  rows={null}
>
  <section
    className="TextInput__LabelWrapper-sc-1fep8p8-2 jCmujy"
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 elQIDR"
      color={null}
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
      onClick={null}
    >
      Colors
    </label>
  </section>
  <input
    autoComplete="on"
    className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
    cols=""
    disabled={false}
    id="autocomplete"
    list="autocomplete_dataList"
    name="autocomplete"
    onBlur={null}
    onChange={[Function]}
    onFocus={null}
    onKeyPress={null}
    onKeyUp={null}
    pattern={null}
    placeholder="Pick a Color"
    rows=""
    type="text"
  />
  <datalist
    id="autocomplete_dataList"
  >
    <option
      value="Red"
    >
      Red
    </option>
    <option
      value="Green"
    >
      Green
    </option>
    <option
      value="Blue"
    >
      Blue
    </option>
    <option
      value="Cyan"
    >
      Cyan
    </option>
    <option
      value="Magenta"
    >
      Magenta
    </option>
    <option
      value="Yellow"
    >
      Yellow
    </option>
    <option
      value="Black"
    >
      Black
    </option>
  </datalist>
</section>
`;
